force-app/main/default/objects/sma__MARelatedList__c/sma__MARelatedList__c.object-meta.xml
<CustomObject>
    <label>MapAnything Related List</label>
    <nameField>
        <label>Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Related Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>