force-app/main/default/objects/sma__MARelatedList__c/fields/sma__Column1__c.field-meta.xml
<CustomField>
    <fullName>sma__Column1__c</fullName>
    <label>Column 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>