force-app/main/default/objects/sma__MARelatedList__c/fields/sma__Column4__c.field-meta.xml
<CustomField>
    <fullName>sma__Column4__c</fullName>
    <label>Column 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>