force-app/main/default/objects/sma__MARelatedList__c/fields/sma__ListLabel__c.field-meta.xml
<CustomField>
    <fullName>sma__ListLabel__c</fullName>
    <label>List Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>