force-app/main/default/objects/sma__MARelatedList__c/fields/sma__NumToDisplay__c.field-meta.xml
<CustomField>
    <fullName>sma__NumToDisplay__c</fullName>
    <label>Num To Display</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>