force-app/main/default/objects/sma__MARelatedList__c/fields/sma__ReferenceField__c.field-meta.xml
<CustomField>
    <fullName>sma__ReferenceField__c</fullName>
    <label>Reference Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>