force-app/main/default/objects/sma__MARelatedList__c/fields/sma__SavedQuery__c.field-meta.xml
<CustomField>
    <fullName>sma__SavedQuery__c</fullName>
    <label>Saved Query</label>
    <referenceTo>sma__MASavedQry__c</referenceTo>
    <relationshipLabel>MapAnything Related Lists</relationshipLabel>
    <relationshipName>MapAnything_Related_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>